--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -33,7 +33,7 @@
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 \usetikzlibrary{positioning}
-\setmainfont[Numbers=Lining,BoldFont={}]{Common serif}
+\setmainfont{Common serif}[Numbers=Lining,BoldFont={},RawFeature={-calt}]
 %Tamaño vertical del aparato crítico.
 \Xprenotes{11pt}
 \prenotesX{11pt}
@@ -68,7 +68,7 @@
 
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section*{{\fontsize{13}{14.35}\selectfont APVNTES}}
+\section*{\fontsize{13}{14.35}\selectfont APVNTES}
 \addcontentsline{toc}{section}{Apuntes}
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmite Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:
@@ -108,7 +108,7 @@ Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales de
 
 Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67\tsup{r.}-70\tsup{r.} contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22].
 
-\section*{{\fontsize{13}{14.35}\selectfont CRITERIOS DE EDICIÓN}}
+\section*{\fontsize{13}{14.35}\selectfont CRITERIOS DE EDICIÓN}
 \addcontentsline{toc}{section}{Criterios de edición}
 
 Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnoteC{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} —esto es, \textit{EM6} y \textit{PN1}—, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, por ser el testimonio que el segundo utiliza base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido\footnoteC{Para el \textit{stemma} completo, \textit{cfr.} \textcite[103]{PérezPriego2017}.} a partir de lo anteriormente indicado:
@@ -190,7 +190,7 @@ El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincid
 
 Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y los pie de página adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante —si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje—, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteC{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base —correcciones, entre otros— y plausibles interpretaciones.
 
-\section*{{\fontsize{13}{14.35}\selectfont BIBLIOGRAFÍA}}
+\section*{\fontsize{13}{14.35}\selectfont BIBLIOGRAFÍA}
 \addcontentsline{toc}{section}{Bibliografía}
 \nocite{*}
 \printbibliography[heading=none]
@@ -200,10 +200,10 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \addcontentsline{toc}{section}{Texto y aparato crítico}
 \newpage
 
-\section*{{\fontsize{13}{14.35}\selectfont CONSPECTVS SIGLORVM}}
+\section*{\fontsize{13}{14.35}\selectfont CONSPECTVS SIGLORVM}
 \addcontentsline{toc}{section}{Conspectus siglorum}
 
-\subsection*{{\fontsize{11}{11.96}\selectfont TESTIMONIA}}
+\subsection*{\fontsize{11}{11.96}\selectfont TESTIMONIA}
 \addcontentsline{toc}{subsection}{Testimonia}
 
 \textit{LB3} = \textit{Cancionero de Egerton}, 1470?-1480?
@@ -218,7 +218,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 
 \textit{83*IM} = \textit{Cancionero de fray Íñigo de Mendoza}, 1483?
 
-\subsection*{{\fontsize{11}{11.96}\selectfont APPARATVS CRITICVS}}
+\subsection*{\fontsize{11}{11.96}\selectfont APPARATVS CRITICVS}
 \addcontentsline{toc}{subsection}{Apparatus criticus}
 
 \textit{a. corr.} = ante correctionem [antes de la corrección].
@@ -660,7 +660,7 @@ di, Muerte, ¿do los asco\textit{n}des\\
 \edtext{Y las sus}{\lemma{y las sus}\Afootnote{y sus muy \textit{83*IM}}} claras hazañas\\
 que fiziero\textit{n} en las guerras\\
 y en las pazes,\\
-q\textit{ua}ndo tú, cruda\footnoteC{\comillas{cruda} = \comillas{Se toma tambien por cruel, áspero, sangriento y desapiadado.} (\textit{Diccionario de Autoridades}, 3ª).}, te ensañas,\\
+q\textit{ua}ndo tú, cruda\footnoteC{\comillas{cruda} = \comillas{Se toma tambien por cruel, áspero, sangriento y desapiadado.} (\textit{Diccionario de Autoridades}).}, te ensañas,\\
 co\textit{n} tu fuerça las atierras\\
 y desfazes\footnoteC{\comillas{guerras/pazes}, \comillas{atierras/desfazes} = es probable que \textit{82*JM} haya leído erróneamente, invirtiendo el orden entre los vv. 272-273 y 275-276, algo que puede conjeturarse por la lección \textit{passos}, quizá una lectura errónea de \textit{pazes} y \textit{guerras}, que aparece en 273, cuando en el resto de testimonios aparece en el 272, al igual que en lugar de \textit{atierras} lee \textit{desfazes} y al revés.}.
 \pend
@@ -764,7 +764,7 @@ ni \edtext{alcançó}{\lemma{alcanço}\Afootnote{llego \textit{HH1}}} \edtext{gr
 ni baxillas,\\
 mas fizo \edtext{guerras a moros}{\Afootnote{guerra a los moros \textit{δ}, \textit{MN19}, \textit{83*IM}; gran guerra a moros \textit{HH1}}}\footnoteC{Se siguen las lecciones plurales de \textit{LB3}, porque don Rodrigo Manrique probablemente no participó en una guerra, sino en otras más. Es necesario atender a los datos proporcionados por Fernando del Pulgar en su \textit{Claros varones de Castilla} [ca. 1480-1486] que, en un capítulo dedicado al maestre, el XIII, titulado «El Maestre Don Rodrigo Manrrique, Conde de Paredes» —que ya citó \textcite[cap. IX]{MenendezYPelayo1944}—, los recoge con gran detalle. A continuación, el pasaje según la edición crítica de Tate:\\
 	\noindent\hspace*{0.5cm}«\textit{En las batallas ⁊ muchos recuentros que ovo con moros ⁊ con christianos este cavallero fue el que, mostrando grand esfuerço a los suyo, fería primero en los contrarios. E las gentes de su conpañía, visto el efuerço de su capitán, todos le seguían ⁊ cobravan osadía de pelear. Tenía tan grand conoscimiento de las cosas del canpo, ⁊ proveí[a]las en tal manera que donde él fue principal capitán nunca puso su gente en logar do se oviese de retraer, porque bolver las espaldas al enemigo era tan ageno que su ánimo que elegía antes de recebir la muerte peleando que salvar la vida huyendo.}\\ 
-	\noindent\hspace*{0.5cm}»\textit{Este cavallero osó acometer grandes fazañas. Especialmente escaló una noche la cibdad de Huesca, que es del reino de Granada. E como quier que subiendo el escala los suyos fueron sentidos de los moros, ⁊ fueron algunos derribados del adarve ⁊ feridos en la subida [...] subieron el muro peleando ⁊ no fallescieron de sus fuerças defendiéndolo, aunque veían los unos derramar su sangre, los otros caer de la cerca. E de esta manera, matando de los moros ⁊ muriendo de los suyos, este capitán, ferido en el braço de una saeta, peleando entró la cibdad e retroxo los moros fasta que los cercó en la fortaleza.} [...] \textit{Este cavallero duró ⁊ fizo durar a los suyos conbatiendo los moros que tenía cercados, e resistiendo a los moros que le tenía cercado por espacio de dos días, fasta que vino el socorro }[...] \textit{Ganada aquella cibdad, dexado en ella por capitán a un su hermano llamado Gómes Manrrique, ganó otras fortalezas en la comarca. Socorrió muchas vezes algunas cibdades ⁊ villa ⁊ capitanes christianos en tienpo de estrema necesidad. ⁊ fizo tanta guerra en aquellas tierras que en el reino de Granada el nonbre de Rodrigo Ma[n]rrique fue mucho tienpo a los moros grand terror.}»}\\
+	\noindent\hspace*{0.5cm}»\textit{Este cavallero osó acometer grandes fazañas. Especialmente escaló una noche la cibdad de Huesca, que es del reino de Granada. E como quier que subiendo el escala los suyos fueron sentidos de los moros, ⁊ fueron algunos derribados del adarve ⁊ feridos en la subida} [...] \textit{subieron el muro peleando ⁊ no fallescieron de sus fuerças defendiéndolo, aunque veían los unos derramar su sangre, los otros caer de la cerca. E de esta manera, matando de los moros ⁊ muriendo de los suyos, este capitán, ferido en el braço de una saeta, peleando entró la cibdad e retroxo los moros fasta que los cercó en la fortaleza.} [...] \textit{Este cavallero duró ⁊ fizo durar a los suyos conbatiendo los moros que tenía cercados, e resistiendo a los moros que le tenía cercado por espacio de dos días, fasta que vino el socorro }[...] \textit{Ganada aquella cibdad, dexado en ella por capitán a un su hermano llamado Gómes Manrrique, ganó otras fortalezas en la comarca. Socorrió muchas vezes algunas cibdades ⁊ villa ⁊ capitanes christianos en tienpo de estrema necesidad. ⁊ fizo tanta guerra en aquellas tierras que en el reino de Granada el nonbre de Rodrigo Ma[n]rrique fue mucho tienpo a los moros grand terror.}»}\\
 gana\textit{n}do sus fortalezas \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{fortalezas [y villas] \textit{eras. LB3}}}\\
 y sus villas;\\
 y en las lides que vençió,\\
@@ -967,7 +967,7 @@ y criados,\\
 dio el alma a quien \edtext{ge la dio}{\lemma{geladio}\Afootnote{gloria dio \textit{LB3}}},\\
 el qual \edtext{la ponga}{\lemma{laponga}\Afootnote{ladio \textit{86*RL}}} en el cielo\\
 y en su gloria;\\
-\edtext{q\textit{ue} aunq\textit{ue}}{\Afootnote{y aunque \textit{82*JM}, \textit{MN19}, \textit{83*IM}}} la vida \edtext{murió}{\lemma{murio}\Afootnote{perdio \textit{LB3}, \textit{86*RL}}}\footnoteC{«murió» en \textit{82*JM}, \textit{MN19} y \textit{83*IM}. Continuando el argumento anterior, se opta por la lección \textit{murió} porque, al fallecer Rodrigo Manrique con todos sus «sentidos humanos conservados», él «se conservaría» a través de la memoria de sus allegados, cosa que no acontecería si «perdiese» la vida [carnal], porque «perder» tiene connotaciones negativas según la 6ª y 7ª acepción en el \textit{Diccionario de Autoridades}, que registra «ocasionar algún daño a las cosas, desmejorándolas o desluciéndolas» y «padecer algún daño, ruína o disminución en lo material, inmaterial o espiritual». Si la «perdiese», aceptando estas acepciones, podría «dañar» o «desmejorar» los \textit{sentidos} y el \textit{entendímiento}, facultades que «regresan» en «plena forma» a su dios, como ya demostraron \textcite{Conde2009} y \textcite{Gonzalez2019}. De ser así, \textit{perdió} anularía la lección \textit{conservados} y, por tanto, lo correcto sería \textit{murió} que, además, por pertenecer a los subarquetipos \textit{α} —82*JM y MN19 y \textit{β} —\textit{83*IM}—, restituye la lección del arquetipo \textit{X}.},\\
+\edtext{q\textit{ue} aunq\textit{ue}}{\Afootnote{y aunque \textit{82*JM}, \textit{MN19}, \textit{83*IM}}} la vida \edtext{murió}{\lemma{murio}\Afootnote{perdio \textit{LB3}, \textit{86*RL}}}\footnoteC{«murió» en \textit{82*JM}, \textit{MN19} y \textit{83*IM}. Continuando el argumento anterior, se opta por la lección \textit{murió} porque, al fallecer Rodrigo Manrique con todos sus «sentidos humanos conservados», él «se conservaría» a través de la memoria de sus allegados, cosa que no acontecería si «perdiese» la vida [carnal], porque «perder» tiene connotaciones negativas según la 6ª y 7ª acepción en el \textit{Diccionario de Autoridades}, que registra «ocasionar algún daño a las cosas, desmejorándolas o desluciéndolas» y «padecer algún daño, ruína o disminución en lo material, inmaterial o espiritual». Si la «perdiese», aceptando estas acepciones, podría «dañar» o «desmejorar» los \textit{sentidos} y el \textit{entendímiento}, facultades que «regresan» en «plena forma» a su dios, como ya demostraron \textcite{Conde2009} y \textcite{Gonzalez2019}. De ser así, \textit{perdió} anularía la lección \textit{conservados} y, por tanto, lo correcto sería \textit{murió} que, además, por pertenecer a los subarquetipos \textit{α} —82*JM y MN19— y \textit{β} —\textit{83*IM}—, restituye la lección del arquetipo \textit{X}.},\\
 \edtext{dexónos}{\lemma{dexonos}\Afootnote{nos dexo \textit{82*JM}, \textit{MN19}, \textit{83*IM}}} harto consuelo\\ 
 su memoria.
 \pend
@@ -1021,7 +1021,10 @@ Coplas apócrifas o póstumas en la \textit{Glosa Famossisima} de Alonso de Cerv
 \end{pairs}
 	\Columns
 
-\vspace{11pt} Tras la copla XL, en \textit{83*IM} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}, que enuncia: \comillas{Aquí yaze muerto el ombre / que vivo queda su nombre.}\footnoteC{Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
+\vspace{11pt} Tras la copla XL, en \textit{83*IM} yace un epitafio con la rúbrica \comillas{En su sepultura dize desta manera}, que enuncia:\vspace{5pt}
+
+\comillas{Aquí yaze muerto el ombre\\
+	que vivo queda su nombre}.\footnoteC{Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
 \vfill
 \relax
 %Espacio para que el comando que ejecuta el sistema no se quiebre. 
